netcfg (1.22) UNRELEASED; urgency=low

  * The return of my friend liw.

 -- Joey Hess <joeyh@debian.org>  Tue, 13 Dec 2005 17:01:35 -0500

netcfg (1.21) unstable; urgency=low

  * dhcp3 calls the "dhcp-class-identifier" option "vendor-class-identifier"
    instead.

  [ Updated translations ]
  * Galician (gl.po) by Jacobo Tarrio

 -- Colin Watson <cjwatson@debian.org>  Tue, 13 Dec 2005 16:11:09 +0000

netcfg (1.20) unstable; urgency=low

  * Fix segfault because of error in hotplug configuration code.

  [ Updated translations ]
  * Latvian (lv.po) by Aigars Mahinovs

 -- Frans Pop <fjp@debian.org>  Sat,  3 Dec 2005 18:54:41 +0100

netcfg (1.19) unstable; urgency=low

  * Fix error in hotplug configuration for interfaces other than eth0.

 -- Frans Pop <fjp@debian.org>  Mon, 28 Nov 2005 23:17:29 +0100

netcfg (1.18) unstable; urgency=low

  [ Joey Hess ]
  * Make netcfg-static use the same menu item number as netcfg, no reason for
    it to differ.

  [ Frans Pop ]
  * Change hotplug configuration as written to interface file. This new
    syntax is supported by both udev and hotplug (from 0.0.20040329-25).
    Closes: #340935.

  [ Updated translations ]
  * German (de.po) by Jens Seidel
  * French (fr.po) by Christian Perrier
  * Malagasy (mg.po) by Jaonary Rabarisoa
  * Romanian (ro.po) by Eddy Petrişor
  * Russian (ru.po) by Yuri Kozlov

 -- Frans Pop <fjp@debian.org>  Mon, 28 Nov 2005 16:36:15 +0100

netcfg (1.17) unstable; urgency=low

  [ Thomas Hood ]
  * Don't make 'localhost.localdomain' the canonical hostname of 127.0.0.1.
    See Oct 2005 debian-devel discussion with Subject: localhost.localdomain,
    e.g., http://lists.debian.org/debian-devel/2005/10/msg00559.html

  [ Frans Pop ]
  * Remove netcfg-dhcp udeb as it is no longer used and maintained.
    The full netcfg is used instead. Closes: #329885.

  [ Geert Stappers ]
  * Identify client in dhcp-requests using "NetcfgDHClient" as